--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "qa": "vite --mode qa",
     "build:qa": "vite build --mode qa --outDir build",
     "preview:qa": "vite preview --outDir build --mode qa",
+    "sales": "vite --mode sales",
+    "build:sales": "vite build --mode sales --outDir build",
+    "preview:sales": "vite preview --outDir build --mode sales",
     "production": "vite --mode production",
     "build:production": "vite build --mode production --outDir build",
     "preview:production": "vite preview --outDir build --mode production"
@@ -32,7 +35,9 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/line-clamp": "^0.1.0",
+    "@tanstack/query-sync-storage-persister": "^5.76.2",
     "@tanstack/react-query": "^5.67.1",
+    "@tanstack/react-query-persist-client": "^5.76.2",
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
