--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
