fix: Apple Pay domain verification - remove .txt extension
- Renamed apple-developer-merchantid-domain-association.txt to remove extension
- Updated vite.config.js to copy file without .txt extension
- Updated .gitignore to exclude build artifacts
- Added Apple Pay diagnostic documentation and tools

This fixes Apple Pay not appearing on Safari/iOS by ensuring Stripe can verify the domain correctly.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,12 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+build
 *.local
+
+# Build-generated files (created during Vite build)
+public/.well-known/
+public/version.json
 
 # Editor directories and files
 .vscode/*
