feat: Add affiliate tracking frontend integration
- Add useAffiliateTracking hook to detect im_ref URL parameter
- Store click ID in localStorage with 30-day attribution window
- Inject X-Affiliate-Click-Id header in all API requests via axios interceptor
- Add trackAffiliateVisit API endpoint integration
- Add comprehensive test suite: click detection, expiration, security, edge cases
- Tests: 27/27 passing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build:dev": "vite build --mode dev --outDir build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "qa": "vite --mode qa",
     "build:qa": "vite build --mode qa --outDir build",
     "preview:qa": "vite preview --outDir build --mode qa",
